Fix image cutoff positioning

--- a/src/components/Projects/ProjectItem.module.css
+++ b/src/components/Projects/ProjectItem.module.css
@@ -19,6 +19,7 @@
     width: 100%;
     object-fit: cover;
     margin-top: .5rem;
+    object-position: top left;
 }
 
 .cardContent {
